# Text-Editor-tejas

./: .gitignore  CMakeLists.txt  LICENSE  README.md  base.h  build.bat  main.cpp  run.bat
include/: base.h  buffer.h  editor.h
source/: base.h  editor.cpp  editor.h  platform.cpp  platform.h  win_main.cpp  win_platform.cpp
src/: buffer.cpp  editor.cpp  main.cpp
